[project]
name = "geoip"
version = "0.1.0"
description = "Tiny Flask server to proxy MaxMind GeoLite requests. Get the estimated city, country, and coordinates of a user's IP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "geoip2>=5.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
]
